--- a/config/dvsdvr.yaml
+++ b/config/dvsdvr.yaml
@@ -6,10 +6,11 @@
 openwrt1:
    bridges: true 
    vxlan:
-      local_ip: '192.168.57.101'
+      local_ip: '192.168.1.101'
       remote_ips:
-         - '192.168.57.102'
-         - '192.168.57.103'
+         - '192.168.1.102'
+         - '192.168.1.103'
+         - '192.168.1.104'
    subnets:
       - vid: '1'
         vni: '101'
@@ -23,10 +24,11 @@ openwrt1:
 openwrt2:
    bridges: true 
    vxlan:
-      local_ip: '192.168.57.102'
+      local_ip: '192.168.1.102'
       remote_ips:
-         - '192.168.57.101'
-         - '192.168.57.103'
+         - '192.168.1.101'
+         - '192.168.1.103'
+         - '192.168.1.104'
    subnets:
       - vid: '1'
         vni: '101'
@@ -40,10 +42,11 @@ openwrt2:
 openwrt3:
    bridges: true 
    vxlan:
-      local_ip: '192.168.57.103'
+      local_ip: '192.168.1.103'
       remote_ips:
-         - '192.168.57.101'
-         - '192.168.57.102'
+         - '192.168.1.101'
+         - '192.168.1.102'
+         - '192.168.1.104'
    subnets:
       - vid: '1'
         vni: '101'
@@ -55,3 +58,20 @@ openwrt3:
         ip_vhost: '10.0.3.103/24'
 
 
+rpi1:
+   bridges: true
+   vxlan:
+      local_ip: '192.168.1.104'
+      remote_ips:
+         - '192.168.1.101' 
+         - '192.168.1.102'
+         - '192.168.1.103'
+   subnets:
+      - vid: '1'
+        vni: '101'
+        ip_dvr: '10.0.1.1/24'
+        ip_vhost: '10.0.1.104/24'
+      - vid: '3'
+        vni: '103'
+        ip_dvr: '10.0.3.1/24'
+        ip_vhost: '10.0.3.104/24'
