Add north-south traffic handling.

--- a/script/dvsdvr.yaml
+++ b/script/dvsdvr.yaml
@@ -1,10 +1,18 @@
-# 2014/2/5
+# Ver 0.1: 2014/2/5
+# Ver 0.2: 2014/2/27
+# Ver 0.3: 2014/3/3
+#
 # OpenWRT DVS/DVR YAML config file
 # 
-# TODO: "jinja2" template manipulation. 
+# TODO: template manipulation with "jinja2" to generate
+# this YAML file automatically.
 
 openwrt1:
-   bridges: true 
+   bridges: enabled
+   gateway:
+      rip: enabled
+      network: eth0.2
+#      network: eth2 
    vxlan:
       local_ip: '192.168.1.101'
       remote_ips:
@@ -16,13 +24,23 @@ openwrt1:
         vni: '101'
         ip_dvr: '10.0.1.1/24'
         ip_vhost: '10.0.1.101/24'
+        ports:
+           - eth0.1 
+#            - veth0.1
       - vid: '3'
         vni: '103'
         ip_dvr: '10.0.3.1/24'
         ip_vhost: '10.0.3.101/24'
+        ports:
+           - eth0.3
+#            - veth0.3
+      - vid: '2'
+        vni: '1'
+        ip_dvr: '192.168.100.1/24'
+        ip_vhost: '192.168.100.101/24'
 
 openwrt2:
-   bridges: true 
+   bridges: enabled
    vxlan:
       local_ip: '192.168.1.102'
       remote_ips:
@@ -34,13 +52,25 @@ openwrt2:
         vni: '101'
         ip_dvr: '10.0.1.1/24'
         ip_vhost: '10.0.1.102/24'
+        ports:
+           - eth0.1
+#            - veth0.1
       - vid: '3'
         vni: '103'
         ip_dvr: '10.0.3.1/24'
         ip_vhost: '10.0.3.102/24'
+        ports:
+           - eth0.3
+#            - veth0.3
+      - vid: '2'
+        vni: '1'
+        ip_dvr: '192.168.100.2/24'
+        default_gw: '192.168.100.1'
+        ip_vhost: '192.168.100.102/24'
+
 
 openwrt3:
-   bridges: true 
+   bridges: enabled
    vxlan:
       local_ip: '192.168.1.103'
       remote_ips:
@@ -52,14 +82,24 @@ openwrt3:
         vni: '101'
         ip_dvr: '10.0.1.1/24'
         ip_vhost: '10.0.1.103/24'
+        ports:
+           - eth0.1
+#            - veth0.1
       - vid: '3'
         vni: '103'
         ip_dvr: '10.0.3.1/24'
         ip_vhost: '10.0.3.103/24'
-
+        ports:
+           - eth0.3
+#            - veth0.3
+      - vid: '2'
+        vni: '1'
+        ip_dvr: '192.168.100.3/24'
+        default_gw: '192.168.100.1'
+        ip_vhost: '192.168.100.103/24'
 
 rpi1:
-   bridges: true
+   bridges: enabled
    vxlan:
       local_ip: '192.168.1.104'
       remote_ips:
@@ -75,4 +115,8 @@ rpi1:
         vni: '103'
         ip_dvr: '10.0.3.1/24'
         ip_vhost: '10.0.3.104/24'
-
+      - vid: '2'
+        vni: '1'
+        ip_dvr: '192.168.100.4/24'
+        default_gw: '192.168.100.1'
+        ip_vhost: '192.168.100.104/24'
