--- a/script/dvsdvr.yaml
+++ b/script/dvsdvr.yaml
@@ -6,9 +6,11 @@
 # 
 # TODO: template manipulation with "jinja2" to generate
 # this YAML file automatically.
-
+#
 openwrt1:
-   bridges: enabled
+   bridges: 
+      ovs_bridges: enabled
+#      controller: '192.168.1.1:6633'
    gateway:
       rip: enabled
       network: eth0.2
@@ -40,7 +42,9 @@ openwrt1:
         ip_vhost: '192.168.100.101/24'
 
 openwrt2:
-   bridges: enabled
+   bridges: 
+      ovs_bridges: enabled
+      controller: '192.168.1.1:6633'
    vxlan:
       local_ip: '192.168.1.102'
       remote_ips:
@@ -70,13 +74,15 @@ openwrt2:
 
 
 openwrt3:
-   bridges: enabled
+   bridges:
+     ovs_bridges: enabled
+     controller: '192.168.1.1:6633'
    vxlan:
-      local_ip: '192.168.1.103'
-      remote_ips:
-         - '192.168.1.101'
-         - '192.168.1.102'
-         - '192.168.1.104'
+     local_ip: '192.168.1.103'
+     remote_ips:
+        - '192.168.1.101'
+        - '192.168.1.102'
+        - '192.168.1.104'
    subnets:
       - vid: '1'
         vni: '101'
@@ -99,7 +105,9 @@ openwrt3:
         ip_vhost: '192.168.100.103/24'
 
 rpi1:
-   bridges: enabled
+   bridges:
+      ovs_bridges: enabled
+      controller: '192.168.1.1:6633'
    vxlan:
       local_ip: '192.168.1.104'
       remote_ips:
