Drectory structure change and a new ovsdb lib

--- a/script/roster.yaml
+++ b/script/roster.yaml
@@ -6,23 +6,23 @@ openwrt1:
    host: 192.168.1.101
    user: root
    passwd: root
-   hardware: bhr_4grv
+   platform: bhr_4grv
 
 openwrt2:
    host: 192.168.1.102
    user: root
    passwd: root
-   hardware: bhr_4grv
+   platform: bhr_4grv
 
 openwrt3:
    host: 192.168.1.103
    user: root
    passwd: root
-   hardware: bhr_4grv
+   platform: bhr_4grv
 
 rpi1:
    host: 192.168.1.104
    user: root
    passwd: root
-   hardware: raspberry_pi_b
+   platform: raspberry_pi_b
 
