--- a/script/dvsdvr.yaml
+++ b/script/dvsdvr.yaml
@@ -1,7 +1,8 @@
 # Ver 0.1: 2014/2/5
 # Ver 0.2: 2014/2/27
 # Ver 0.3: 2014/3/3
-#
+# Ver 0.4: 2014/3/28
+# 
 # OpenWRT DVS/DVR YAML config file
 # 
 # TODO: template manipulation with "jinja2" to generate
@@ -10,11 +11,11 @@
 openwrt1:
    bridges: 
       ovs_bridges: enabled
-      controller: '192.168.1.1:6633'
+#      controller: '192.168.1.1:6633'
    gateway:
       rip: enabled
       network: eth0.2
-#      network: eth2 
+#     network: eth2 
    vxlan:
       local_ip: '192.168.1.101'
       remote_ips:
@@ -22,29 +23,29 @@ openwrt1:
          - '192.168.1.103'
          - '192.168.1.104'
    subnets:
-      - vid: '1'
-        vni: '101'
+      - vid: 1
+        vni: 101
         ip_dvr: '10.0.1.1/24'
         ip_vhost: '10.0.1.101/24'
         ports:
            - eth0.1 
-#            - veth0.1
-      - vid: '3'
-        vni: '103'
+#          - veth0.1
+      - vid: 3
+        vni: 103
         ip_dvr: '10.0.3.1/24'
         ip_vhost: '10.0.3.101/24'
         ports:
            - eth0.3
-#            - veth0.3
-      - vid: '2'
-        vni: '1'
+#          - veth0.3
+      - vid: 2
+        vni: 1
         ip_dvr: '192.168.100.1/24'
         ip_vhost: '192.168.100.101/24'
 
 openwrt2:
    bridges: 
       ovs_bridges: enabled
-      controller: '192.168.1.1:6633'
+#     controller: '192.168.1.1:6633'
    vxlan:
       local_ip: '192.168.1.102'
       remote_ips:
@@ -52,22 +53,22 @@ openwrt2:
          - '192.168.1.103'
          - '192.168.1.104'
    subnets:
-      - vid: '1'
-        vni: '101'
+      - vid: 1
+        vni: 101
         ip_dvr: '10.0.1.1/24'
         ip_vhost: '10.0.1.102/24'
         ports:
            - eth0.1
-#            - veth0.1
-      - vid: '3'
-        vni: '103'
+#          - veth0.1
+      - vid: 3
+        vni: 103
         ip_dvr: '10.0.3.1/24'
         ip_vhost: '10.0.3.102/24'
         ports:
            - eth0.3
-#            - veth0.3
-      - vid: '2'
-        vni: '1'
+#          - veth0.3
+      - vid: 2
+        vni: 1
         ip_dvr: '192.168.100.2/24'
         default_gw: '192.168.100.1'
         ip_vhost: '192.168.100.102/24'
@@ -76,7 +77,7 @@ openwrt2:
 openwrt3:
    bridges:
      ovs_bridges: enabled
-     controller: '192.168.1.1:6633'
+#    controller: '192.168.1.1:6633'
    vxlan:
      local_ip: '192.168.1.103'
      remote_ips:
@@ -84,22 +85,22 @@ openwrt3:
         - '192.168.1.102'
         - '192.168.1.104'
    subnets:
-      - vid: '1'
-        vni: '101'
+      - vid: 1
+        vni: 101
         ip_dvr: '10.0.1.1/24'
         ip_vhost: '10.0.1.103/24'
         ports:
            - eth0.1
-#            - veth0.1
-      - vid: '3'
-        vni: '103'
+#          - veth0.1
+      - vid: 3
+        vni: 103
         ip_dvr: '10.0.3.1/24'
         ip_vhost: '10.0.3.103/24'
         ports:
            - eth0.3
-#            - veth0.3
-      - vid: '2'
-        vni: '1'
+#          - veth0.3
+      - vid: 2
+        vni: 1
         ip_dvr: '192.168.100.3/24'
         default_gw: '192.168.100.1'
         ip_vhost: '192.168.100.103/24'
@@ -107,7 +108,7 @@ openwrt3:
 rpi1:
    bridges:
       ovs_bridges: enabled
-      controller: '192.168.1.1:6633'
+#     controller: '192.168.1.1:6633'
    vxlan:
       local_ip: '192.168.1.104'
       remote_ips:
@@ -115,16 +116,16 @@ rpi1:
          - '192.168.1.102'
          - '192.168.1.103'
    subnets:
-      - vid: '1'
-        vni: '101'
+      - vid: 1
+        vni: 101
         ip_dvr: '10.0.1.1/24'
         ip_vhost: '10.0.1.104/24'
-      - vid: '3'
-        vni: '103'
+      - vid: 3
+        vni: 103
         ip_dvr: '10.0.3.1/24'
         ip_vhost: '10.0.3.104/24'
-      - vid: '2'
-        vni: '1'
+      - vid: 2
+        vni: 1
         ip_dvr: '192.168.100.4/24'
         default_gw: '192.168.100.1'
         ip_vhost: '192.168.100.104/24'
