--- a/script/test.yaml
+++ b/script/test.yaml
@@ -10,34 +10,121 @@
 openwrt1:
    bridges: 
       ovs_bridges: enabled
-#      controller: '192.168.1.1:6633'
+      controller: 192.168.1.1:6633
    gateway:
       rip: enabled
       network: eth0.2
 #      network: eth2 
    vxlan:
-      local_ip: '192.168.1.101'
+      local_ip: 192.168.1.101
       remote_ips:
          - '192.168.1.102'
          - '192.168.1.103'
          - '192.168.1.104'
    subnets:
-      - vid: '5'
-        vni: '101'
+      - vid: 1
+        vni: 101
         ip_dvr: '10.0.1.1/24'
         ip_vhost: '10.0.1.101/24'
         ports:
            - eth0.1 
 #            - veth0.1
-      - vid: '3'
-        vni: '103'
+      - vid: 3
+        vni: 103
         ip_dvr: '10.0.3.1/24'
         ip_vhost: '10.0.3.101/24'
         ports:
            - eth0.3
 #            - veth0.3
-      - vid: '2'
-        vni: '1'
+      - vid: 2
+        vni: 1
         ip_dvr: '192.168.100.1/24'
         ip_vhost: '192.168.100.101/24'
 
+openwrt2:
+   bridges: 
+      ovs_bridges: enabled
+      controller: '192.168.1.1:6633'
+   vxlan:
+      local_ip: '192.168.1.102'
+      remote_ips:
+         - '192.168.1.101'
+         - '192.168.1.103'
+         - '192.168.1.104'
+   subnets:
+      - vid: 1
+        vni: 101
+        ip_dvr: '10.0.1.1/24'
+        ip_vhost: '10.0.1.102/24'
+        ports:
+           - eth0.1
+#            - veth0.1
+      - vid: 3
+        vni: 103
+        ip_dvr: '10.0.3.1/24'
+        ip_vhost: '10.0.3.102/24'
+        ports:
+           - eth0.3
+#            - veth0.3
+      - vid: 2
+        vni: 1
+        ip_dvr: '192.168.100.2/24'
+        default_gw: '192.168.100.1'
+        ip_vhost: '192.168.100.102/24'
+
+
+openwrt3:
+   bridges:
+     ovs_bridges: enabled
+     controller: '192.168.1.1:6633'
+   vxlan:
+     local_ip: '192.168.1.103'
+     remote_ips:
+        - '192.168.1.101'
+        - '192.168.1.102'
+        - '192.168.1.104'
+   subnets:
+      - vid: 1
+        vni: 101
+        ip_dvr: '10.0.1.1/24'
+        ip_vhost: '10.0.1.103/24'
+        ports:
+           - eth0.1
+#            - veth0.1
+      - vid: 3
+        vni: 103
+        ip_dvr: '10.0.3.1/24'
+        ip_vhost: '10.0.3.103/24'
+        ports:
+           - eth0.3
+#            - veth0.3
+      - vid: 2
+        vni: 1
+        ip_dvr: '192.168.100.3/24'
+        default_gw: '192.168.100.1'
+        ip_vhost: '192.168.100.103/24'
+
+rpi1:
+   bridges:
+      ovs_bridges: enabled
+      controller: '192.168.1.1:6633'
+   vxlan:
+      local_ip: '192.168.1.104'
+      remote_ips:
+         - '192.168.1.101' 
+         - '192.168.1.102'
+         - '192.168.1.103'
+   subnets:
+      - vid: 1
+        vni: 101
+        ip_dvr: '10.0.1.1/24'
+        ip_vhost: '10.0.1.104/24'
+      - vid: 3
+        vni: 103
+        ip_dvr: '10.0.3.1/24'
+        ip_vhost: '10.0.3.104/24'
+      - vid: 2
+        vni: 1
+        ip_dvr: '192.168.100.4/24'
+        default_gw: '192.168.100.1'
+        ip_vhost: '192.168.100.104/24'
