--- a/script/dvsdvr.yaml
+++ b/script/dvsdvr.yaml
@@ -11,7 +11,7 @@
 openwrt1:
    bridges: 
       ovs_bridges: enabled
-      controller: '192.168.1.1:6633'
+#      controller: '192.168.1.1:6633'
    gateway:
       rip: enabled
       network: eth0.2
