--- a/script/dvsdvr_old.yaml
+++ b/script/dvsdvr_old.yaml
@@ -1,15 +1,12 @@
-#!template.dvsdvr
-# The top line declares the corresponding template module.
-#
 # Ver 0.1: 2014/2/5
 # Ver 0.2: 2014/2/27
 # Ver 0.3: 2014/3/3
 # Ver 0.4: 2014/3/28
-# Ver 0.5: 2014/4/3, works with a template engine
-#
+# 
 # OpenWRT DVS/DVR YAML config file
-#
-# A corresponding template module fills out all <...>
+# 
+# TODO: template manipulation with "jinja2" to generate
+# this YAML file automatically.
 #
 openwrt1:
    bridges: 
@@ -21,7 +18,10 @@ openwrt1:
 #     network: eth2 
    vxlan:
       local_ip: '192.168.1.101'
-      remote_ips: <remote_ips>
+      remote_ips:
+         - '192.168.1.102'
+         - '192.168.1.103'
+         - '192.168.1.104'
    subnets:
       - vid: 1
         vni: 101
@@ -30,7 +30,6 @@ openwrt1:
         ports:
            - eth0.1 
 #          - veth0.1
-        peers: <peers> 
       - vid: 3
         vni: 103
         ip_dvr: '10.0.3.1/24'
@@ -38,12 +37,10 @@ openwrt1:
         ports:
            - eth0.3
 #          - veth0.3
-        peers: <peers>
       - vid: 2
         vni: 1
         ip_dvr: '192.168.100.1/24'
         ip_vhost: '192.168.100.101/24'
-        peers: <peers>
 
 openwrt2:
    bridges: 
@@ -51,7 +48,10 @@ openwrt2:
 #     controller: '192.168.1.1:6633'
    vxlan:
       local_ip: '192.168.1.102'
-      remote_ips: <remote_ips>
+      remote_ips:
+         - '192.168.1.101'
+         - '192.168.1.103'
+         - '192.168.1.104'
    subnets:
       - vid: 1
         vni: 101
@@ -60,7 +60,6 @@ openwrt2:
         ports:
            - eth0.1
 #          - veth0.1
-        peers: <peers>
       - vid: 3
         vni: 103
         ip_dvr: '10.0.3.1/24'
@@ -68,13 +67,11 @@ openwrt2:
         ports:
            - eth0.3
 #          - veth0.3
-        peers: <peers>
       - vid: 2
         vni: 1
         ip_dvr: '192.168.100.2/24'
         default_gw: '192.168.100.1'
         ip_vhost: '192.168.100.102/24'
-        peers: <peers>
 
 
 openwrt3:
@@ -83,7 +80,10 @@ openwrt3:
 #    controller: '192.168.1.1:6633'
    vxlan:
      local_ip: '192.168.1.103'
-     remote_ips: <remote_ips>
+     remote_ips:
+        - '192.168.1.101'
+        - '192.168.1.102'
+        - '192.168.1.104'
    subnets:
       - vid: 1
         vni: 101
@@ -111,7 +111,10 @@ rpi1:
 #     controller: '192.168.1.1:6633'
    vxlan:
       local_ip: '192.168.1.104'
-      remote_ips: <remote_ips>
+      remote_ips:
+         - '192.168.1.101' 
+         - '192.168.1.102'
+         - '192.168.1.103'
    subnets:
       - vid: 1
         vni: 101
@@ -121,3 +124,8 @@ rpi1:
         vni: 103
         ip_dvr: '10.0.3.1/24'
         ip_vhost: '10.0.3.104/24'
+      - vid: 2
+        vni: 1
+        ip_dvr: '192.168.100.4/24'
+        default_gw: '192.168.100.1'
+        ip_vhost: '192.168.100.104/24'
