--- a/script/dvsdvr.yaml
+++ b/script/dvsdvr.yaml
@@ -115,8 +115,8 @@ rpi1:
       ovs_bridges: enabled
 #     controller: '192.168.1.1:6633'
    services:
-      - name: iptables1
-        function: iptables 
+      - name: snort1
+        function: snort 
         mode: bump-in-the-wire
         chain: [openwrt2.1001, openwrt1.1]
    vxlan:
