--- a/nlan/scenario/services.yaml
+++ b/nlan/scenario/services.yaml
@@ -2,7 +2,7 @@
 # NLAN Modules testing
 #
   - do: init2.yaml
-  - comment: 'add _name'
+  - comment: add _name
     nlan:
         router: rpi1
         options: --add
@@ -10,16 +10,16 @@
             services:
                 - _index: [name, snort1]
                   name: snort1
-  - comment: 'add _name (lxc-list)'
+  - comment: add _name (lxc-list)
     nlan:
         options: --raw
-        args: 'lxc-list; ip link show'
-  - comment: 'add _name (ovsdb)'
+        args: lxc-list; ip link show
+  - comment: add _name (ovsdb)
     nlan:
-        args: 'db.getrow services name snort1'
+        args: db.getrow services name snort1
         assert:
             name: snort1
-  - comment: 'add _chain'
+  - comment: add _chain
     nlan:
         options: --add
         args:
@@ -28,20 +28,20 @@
                   chain:
                     - aaa.101
                     - bbb.102
-  - comment: 'add _chain (lxc-list)'
+  - comment: add _chain (lxc-list)
     nlan:
         options: --raw
-        args: 'lxc-list; ip link show'
-  - comment: 'add _chain (ovsdb)'
+        args: lxc-list; ip link show
+  - comment: add _chain (ovsdb)
     nlan:
-        args: 'db.getrow services name snort1'
+        args: db.getrow services name snort1
         assert:
             name: snort1
             chain:
                 - aaa.101
                 - bbb.102
   - sleep: 3
-  - comment: 'update _chain'
+  - comment: update _chain
     nlan:
         options: --update
         args:
@@ -50,19 +50,19 @@
                   chain:
                     - aaa.101
                     - bbb.192
-  - comment: 'update _chain (lxc-list)'
+  - comment: update _chain (lxc-list)
     nlan:
         options: --raw
-        args: 'lxc-list; ip link show'
-  - comment: 'update _chain (ovsdb)'
+        args: lxc-list; ip link show
+  - comment: update _chain (ovsdb)
     nlan:
-        args: 'db.getrow services name snort1'
+        args: db.getrow services name snort1
         assert:
             name: snort1
             chain:
                 - aaa.101
                 - bbb.192
-  - comment: 'delete _chain'
+  - comment: delete _chain
     nlan:
         options: --delete
         args:
@@ -71,26 +71,26 @@
                   chain:
                     - aaa.101
                     - bbb.192
-  - comment: 'delete _chain (lxc-list)'
+  - comment: delete _chain (lxc-list)
     nlan:
         options: --raw
-        args: 'lxc-list; ip link show'
-  - comment: 'delete _chain (ovsdb)'
+        args: lxc-list; ip link show
+  - comment: delete _chain (ovsdb)
     nlan:
-        args: 'db.getrow services name snort1'
+        args: db.getrow services name snort1
         assert:
             name: snort1
   - speep: 3
-  - comment: 'delete _name'
+  - comment: delete _name
     nlan:
         options: --delete
         args:
             services:
                 - _index: [name, snort1]
                   name: snort1
-  - comment: 'delete _name (ovsdb)'
+  - comment: delete _name (ovsdb)
     nlan:
-        args: 'db.getrow services name snort1'
+        args: db.getrow services name snort1
         assert: null
 
 
