--- a/nlan/scenario/bridges.yaml
+++ b/nlan/scenario/bridges.yaml
@@ -13,7 +13,7 @@
             type: ModelError
   - comment: add, _ovs_bridges and not _controller
     nlan:
-        options: --add
+        options: --add --debug
         args:
             bridges:
                 ovs_bridges: enabled
