--- a/etc/state.yaml
+++ b/etc/state.yaml
@@ -42,6 +42,7 @@ openwrt1:
         ip_dvr:
             addr: '10.0.1.1/24'
             mode: hub 
+            dhcp: enabled
         ip_vhost: '10.0.1.101/24'
 #       ports:
 #          - eth0.1 
@@ -52,6 +53,7 @@ openwrt1:
         ip_dvr:
             addr: '10.0.3.1/24'
             mode: dvr 
+            dhcp: enabled
         ip_vhost: '10.0.3.101/24'
 #       ports:
 #          - eth0.3
