--- a/test/scenario/bridges.yaml
+++ b/test/scenario/bridges.yaml
@@ -8,12 +8,12 @@
         options: --add
         args:
             bridges:
-                controller: 192.168.1.1:6633
+                controller: tcp:192.168.1.1:6633
         assertRaises:
             type: ModelError
   - comment: add, _ovs_bridges and not _controller
     nlan:
-        options: --add --debug
+        options: --add 
         args:
             bridges:
                 ovs_bridges: enabled
@@ -31,12 +31,20 @@
         assert:
             bridges:
                 ovs_bridges: enabled
+  - comment: add, _controller and _ovs_bridges_ (failure)
+    nlan:
+        options: --add
+        args:
+            bridges:
+                controller: tccp:192.168.1.1:6633
+        assertRaises:
+            type: ModelError
   - comment: add, _controller and _ovs_bridges_
     nlan:
         options: --add
         args:
             bridges:
-                controller: 192.168.1.1:6633
+                controller: tcp:192.168.1.1:6633
   - comment: add, _controller and _ovs_bridges_ (ovs-vsctl)
     nlan:
         options: --raw
@@ -51,13 +59,13 @@
         assert:
             bridges:
                 ovs_bridges: enabled
-                controller: 192.168.1.1:6633
+                controller: tcp:192.168.1.1:6633
   - comment: delete, _controller and not _ovs_bridges
     nlan:
         options: --delete
         args:
             bridges:
-                controller: 192.168.1.1:6633
+                controller: tcp:192.168.1.1:6633
   - comment: delete, _controller and not _ovs_bridges (ovs-vsctl)
     nlan:
         options: --raw
