--- a/etc/hub_and_spoke.yaml
+++ b/etc/hub_and_spoke.yaml
@@ -15,8 +15,8 @@ openwrt1:
    bridges: 
       ovs_bridges: enabled
    vxlan:
-      local_ip: <local_ip> 
-      remote_ips: <remote_ips>
+      - local_ip: <local_ip> 
+        remote_ips: <remote_ips>
    subnets:
       - vid: 1
         vni: 101
@@ -32,8 +32,8 @@ openwrt2:
    bridges: 
       ovs_bridges: enabled
    vxlan:
-      local_ip: <local_ip> 
-      remote_ips: [192.168.1.101] 
+      - local_ip: <local_ip> 
+        remote_ips: [192.168.1.101] 
    subnets:
       - vid: 1
         vni: 101
@@ -49,8 +49,8 @@ openwrt3:
    bridges:
      ovs_bridges: enabled
    vxlan:
-     local_ip: <local_ip> 
-     remote_ips: [192.168.1.101] 
+     - local_ip: <local_ip> 
+       remote_ips: [192.168.1.101] 
    subnets:
       - vid: 1
         vni: 101
@@ -66,8 +66,8 @@ rpi1:
    bridges:
      ovs_bridges: enabled
    vxlan:
-     local_ip: <local_ip> 
-     remote_ips: [192.168.1.101] 
+     - local_ip: <local_ip> 
+       remote_ips: [192.168.1.101] 
    subnets:
       - vid: 1
         vni: 101
