--- a/etc/roster.yaml
+++ b/etc/roster.yaml
@@ -1,30 +1,50 @@
-# 2014/2/6
-# Roster of OpenWRT routers. 
-#
+# July 2014 
+# Roster of seven OpenWRT routers and one Debian Linux server. 
 
 openwrt1:
-   host: 192.168.1.101
+   host: 192.168.56.101
    user: root
    passwd: root
    platform: openwrt 
 
 openwrt2:
-   host: 192.168.1.102
+   host: 192.168.56.102
    user: root
    passwd: root
    platform: openwrt 
 
 openwrt3:
-   host: 192.168.1.103
+   host: 192.168.56.103
    user: root
    passwd: root
    platform: openwrt 
 
-rpi1:
-   host: 192.168.1.104
+openwrt4:
+   host: 192.168.56.104
    user: root
    passwd: root
-#  platform: raspbian
-#  platform: openwrt
-   platform: debian
+   platform: openwrt 
 
+openwrt5:
+   host: 192.168.56.105
+   user: root
+   passwd: root
+   platform: openwrt 
+
+openwrt6:
+   host: 192.168.56.106
+   user: root
+   passwd: root
+   platform: openwrt 
+
+openwrt7:
+   host: 192.168.56.107
+   user: root
+   passwd: root
+   platform: openwrt 
+
+master:
+   host: 192.168.56.200
+   user: root
+   passwd: root
+   platform: debian
